more builtin nodes (math & string)

--- a/packages/impoexpo-client/src/locales/en.po
+++ b/packages/impoexpo-client/src/locales/en.po
@@ -120,6 +120,11 @@ msgid "doggy"
 msgstr "doggy"
 
 #: src/features/format-editor/nodes/builtin/console.tsx:49
+#: src/features/format-editor/nodes/builtin/strings.tsx:35
+#: src/features/format-editor/nodes/builtin/strings.tsx:50
+#: src/features/format-editor/nodes/builtin/strings.tsx:63
+#: src/features/format-editor/nodes/builtin/strings.tsx:78
+#: src/features/format-editor/nodes/builtin/strings.tsx:92
 msgid "string"
 msgstr "string"
 
@@ -128,6 +133,7 @@ msgid "enter a string (at least 5 characters)"
 msgstr "enter a string (at least 5 characters)"
 
 #: src/features/format-editor/nodes/builtin/console.tsx:53
+#: src/features/format-editor/nodes/builtin/strings.tsx:75
 msgid "number"
 msgstr "number"
 
@@ -136,6 +142,7 @@ msgid "input a number"
 msgstr "input a number"
 
 #: src/features/format-editor/nodes/builtin/console.tsx:57
+#: src/features/format-editor/nodes/builtin/strings.tsx:87
 msgid "boolean"
 msgstr "boolean"
 
@@ -155,6 +162,79 @@ msgstr "yeah"
 msgid "hell yeah!"
 msgstr "hell yeah!"
 
+#: src/features/format-editor/nodes/builtin/math.tsx:12
+msgid "math"
+msgstr "math"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:32
+#: src/features/format-editor/nodes/builtin/math.tsx:52
+#: src/features/format-editor/nodes/builtin/strings.tsx:26
+#: src/features/format-editor/nodes/builtin/strings.tsx:40
+#: src/features/format-editor/nodes/builtin/strings.tsx:54
+#: src/features/format-editor/nodes/builtin/strings.tsx:66
+msgid "result"
+msgstr "result"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:49
+msgid "input"
+msgstr "input"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:57
+msgid "add"
+msgstr "add"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:57
+msgid "sum"
+msgstr "sum"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:58
+msgid "subtract"
+msgstr "subtract"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:59
+msgid "multiply"
+msgstr "multiply"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:60
+msgid "divide"
+msgstr "divide"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:61
+msgid "modulo"
+msgstr "modulo"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:61
+msgid "remainder"
+msgstr "remainder"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:62
+msgid "power"
+msgstr "power"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:64
+msgid "absolute value"
+msgstr "absolute value"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:64
+msgid "abs"
+msgstr "abs"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:65
+msgid "log"
+msgstr "log"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:66
+msgid "negate"
+msgstr "negate"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:67
+msgid "square root"
+msgstr "square root"
+
+#: src/features/format-editor/nodes/builtin/math.tsx:67
+msgid "sqrt"
+msgstr "sqrt"
+
 #: src/features/format-editor/nodes/builtin/notifications.tsx:12
 msgid "notifications"
 msgstr "notifications"
@@ -171,7 +251,68 @@ msgstr "warning"
 msgid "error"
 msgstr "error"
 
-#: src/features/format-editor/search-nodes-modal/SearchNodesModal.tsx:127
+#: src/features/format-editor/nodes/builtin/strings.tsx:12
+msgid "strings"
+msgstr "strings"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:17
+msgid "combine strings"
+msgstr "combine strings"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:18
+msgid "add strings"
+msgstr "add strings"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:18
+msgid "join strings"
+msgstr "join strings"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:31
+msgid "replace in string"
+msgstr "replace in string"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:36
+#: src/features/format-editor/nodes/builtin/strings.tsx:51
+msgid "pattern"
+msgstr "pattern"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:37
+msgid "replacement"
+msgstr "replacement"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:45
+msgid "string contains X?"
+msgstr "string contains X?"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:46
+msgid "search in string"
+msgstr "search in string"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:46
+msgid "find in string"
+msgstr "find in string"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:59
+msgid "length of string"
+msgstr "length of string"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:71
+msgid "number -> string"
+msgstr "number -> string"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:83
+msgid "boolean -> string"
+msgstr "boolean -> string"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:88
+msgid "\"true\" string"
+msgstr "\"true\" string"
+
+#: src/features/format-editor/nodes/builtin/strings.tsx:89
+msgid "\"false\" string"
+msgstr "\"false\" string"
+
+#: src/features/format-editor/search-nodes-modal/SearchNodesModal.tsx:130
 msgid "enter the name, category or tag of the needed node..."
 msgstr "enter the name, category or tag of the needed node..."
 
