--- a/packages/impoexpo-client/src/locales/en.po
+++ b/packages/impoexpo-client/src/locales/en.po
@@ -390,8 +390,8 @@ msgid "select sources"
 msgstr "select sources"
 
 #: src/features/transfer-wizard/TransferWizardPage.tsx:160
-msgid "where should we read from and where should we write to?"
-msgstr "where should we read from and where should we write to?"
+msgid "what should we transfer?"
+msgstr "what should we transfer?"
 
 #: src/features/transfer-wizard/TransferWizardPage.tsx:162
 msgid "formatting"
@@ -402,12 +402,12 @@ msgid "how should we transfer?"
 msgstr "how should we transfer?"
 
 #: src/features/transfer-wizard/TransferWizardPage.tsx:163
-msgid "transfer"
-msgstr "transfer"
+msgid "where the magic happens..."
+msgstr "where the magic happens..."
 
 #: src/features/transfer-wizard/TransferWizardPage.tsx:163
-msgid "where the magic happens"
-msgstr "where the magic happens"
+msgid "transfer"
+msgstr "transfer"
 
 #: src/features/transfer-wizard/TransferWizardPage.tsx:164
 #: src/features/transfer-wizard/transfer-progress-card/TransferProgressCard.tsx:209
@@ -463,10 +463,6 @@ msgstr "we couldn't process your project"
 #: src/features/transfer-wizard/transfer-progress-card/TransferProgressCard.tsx:196
 msgid "please check the last notification to see what went wrong and try again."
 msgstr "please check the last notification to see what went wrong and try again."
-
-#: src/features/transfer-wizard/transfer-progress-card/TransferProgressCard.tsx:196
-#~ msgid "please check the last notification too see what went wrong and try again."
-#~ msgstr "please check the last notification too see what went wrong and try again."
 
 #: src/features/transfer-wizard/transfer-progress-card/TransferProgressCard.tsx:267
 msgid "uploading your project"
